--- a/MultiFaceRec.csproj
+++ b/MultiFaceRec.csproj
@@ -60,7 +60,18 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>bin\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>bin\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MLDeviceControler">
+      <HintPath>..\..\..\Downloads\card\card\MLDeviceControler\bin\Debug\MLDeviceControler.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -82,12 +93,21 @@
     <Compile Include="Model\ModelBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\Helpers.cs" />
+    <Compile Include="Shared\Client.cs" />
     <Compile Include="Shared\ResHelper.cs" />
+    <Compile Include="Shared\server.cs" />
     <Compile Include="View\CallApi.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\CallApi.Designer.cs">
       <DependentUpon>CallApi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\CardReader.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\CardReader.Designer.cs">
+      <DependentUpon>CardReader.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Home.cs">
       <SubType>Form</SubType>
@@ -110,6 +130,9 @@
     </Compile>
     <EmbeddedResource Include="View\CallApi.resx">
       <DependentUpon>CallApi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\CardReader.resx">
+      <DependentUpon>CardReader.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
@@ -151,6 +174,8 @@
     <None Include="Resources\Donate.gif" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CNAPIV01_DESFire.dll" />
+    <Content Include="CNAPIV01_DESFire.H" />
     <Content Include="haarcascade_frontalface_alt.xml" />
   </ItemGroup>
   <ItemGroup>
