--- a/MultiFaceRec.csproj
+++ b/MultiFaceRec.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Shared\Client.cs" />
     <Compile Include="Shared\ResHelper.cs" />
     <Compile Include="Shared\server.cs" />
+    <Compile Include="StandbyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StandbyForm.Designer.cs">
+      <DependentUpon>StandbyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\CallApi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,6 +134,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StandbyForm.resx">
+      <DependentUpon>StandbyForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\CallApi.resx">
       <DependentUpon>CallApi.cs</DependentUpon>
     </EmbeddedResource>
@@ -177,6 +186,7 @@
     <Content Include="CNAPIV01_DESFire.dll" />
     <Content Include="CNAPIV01_DESFire.H" />
     <Content Include="haarcascade_frontalface_alt.xml" />
+    <None Include="Resources\full_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EmguCV">
@@ -188,6 +198,25 @@
     <PackageReference Include="System.Net.Http">
       <Version>4.3.4</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AxWMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>aximp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+    <COMReference Include="WMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
