--- a/MultiFaceRec.csproj
+++ b/MultiFaceRec.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Model\ModelBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\ComboBoxSetting.cs" />
     <Compile Include="Shared\Helpers.cs" />
     <Compile Include="Shared\Client.cs" />
     <Compile Include="Shared\ResHelper.cs" />
@@ -189,6 +190,9 @@
     <None Include="Resources\full_logo.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DirectShowLib">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="EmguCV">
       <Version>3.1.0.1</Version>
     </PackageReference>
